--- a/chirper/package.json
+++ b/chirper/package.json
@@ -20,6 +20,8 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "flux": "^2.1.1",
-    "object-assign": "^3.0.0"
+    "object-assign": "^3.0.0",
+    "react": "^0.13.3",
+    "react-router": "^0.13.4"
   }
 }
