--- a/chirper/package.json
+++ b/chirper/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "gulp watch"
-
   },
   "author": "",
   "license": "MIT",
@@ -23,6 +22,7 @@
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "flux": "^2.1.1",
+    "moment": "^2.10.6",
     "object-assign": "^3.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.4"
