--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "through2": "^2.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
+    "express-session": "^1.13.0",
     "flux": "^2.1.1",
+    "locallydb": "0.0.9",
     "moment": "^2.10.6",
     "object-assign": "^3.0.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^0.13.3",
     "react-router": "^0.13.4"
   }
